--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@ li{
         <div style="font-family: 'Limelight', cursive; margin-top: 50px; font-size: 35px;">
            The technology that we have all been waiting for 
             <br>
-            <video width="800px" id="video1" autoplay loop>
-             <source src="video1.mp4">
-            </video>
+            <img src="video1.gif" width="800px">
         </div>   
         <div>
             <h1 style="margin-bottom: 20px;">A Device To Control Your Mind</h1>
