--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@ li{
             <h1 style="margin-bottom: 20px;">What is Autonomic Nervous System?</h1>
             <p> The term autonomic nervous system (ANS) refers to collections of motor neurons situated in the head, neck, thorax, abdomen, and pelvis, and to the axonal connections of these neurons. Autonomic pathways, together with somatic motor pathways to skeletal muscle and neuroendocrine pathways, are the means whereby the central nervous system (CNS) sends commands to the rest of the body.
              A WBAN (Wireless Body Area Networks)is a network built with different intelligent elements such as sensors, nodes, and actuators.</p>
-            <button style="background-color: coral; width: 400px; height: 70px; margin-top: 70px; border:solid; border-color:burlywood; font-size: 40px;">ORDER NOW!</button>
              <br>
              <image src="brain.png" width="900px" style="margin-top: 50px; margin-left: 50px; "></image>
         </div>
@@ -135,11 +134,11 @@ li{
         <div>
             <h1 style="margin-bottom: 20px;">External Gagdet to trigger commands </h1>
             <p> Once the device is connected, with one click the 5 senses sensors can be given information which in turn send electrical signals to the brain. The App allows you to give customised instructions. </p>
-            <button style="background-color: coral; width: 400px; height: 70px; margin-top: 70px; border:solid; border-color:burlywood; font-size: 40px;">ORDER NOW!</button>
-        </div>
+            </div>
         <div>
             <h1 style="margin-bottom: 20px;">How to Connect the device </h1>
             <p> To connect the device place the device anywhere in the Cervical Plexus block and download our app here: <a style="color:blue;"> https://ansa.app/9QYqUwinc</a></p>
+            <image src="image-23.png" width="900px" style="margin-top: 50px; margin-left: 50px; "></image>
             <button style="background-color: coral; width: 400px; height: 70px; margin-top: 70px; border:solid; border-color:burlywood; font-size: 40px;">ORDER NOW!</button>
         </div>
     </section>
